kubernetes/k3s-prod-a/romm/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: romm
  namespace: romm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: romm
  template:
    metadata:
      labels:
        app: romm
    spec:
      containers:
        - name: romm
          image: docker.io/rommapp/romm:3.6.0@sha256:c51f96b2ccb155b213fa9b7ebee6a39801e451c9b172291c3e70af8a30d37789
          startupProbe:
            httpGet:
              path: /api/heartbeat
              port: 8080
            failureThreshold: 5
            periodSeconds: 20
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: romm-data
              mountPath: /romm/assets
              subPath: assets/
            - name: romm-data
              mountPath: /romm/config
              subPath: config/
            - name: romm-data
              mountPath: /romm/resources
              subPath: resources/
            - name: romm-roms
              mountPath: /romm/library/roms
      volumes:
        - name: romm-data
          persistentVolumeClaim:
            claimName: romm-data
        - name: romm-roms
          persistentVolumeClaim:
            claimName: romm-roms
