kubernetes/k3s-prod-a/romm/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: romm
  namespace: romm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: romm
