kubernetes/k3s-prod-a/romm/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: romm
  namespace: romm
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`romm.l.47fc5c.com`)
      kind: Rule
      services:
        - name: romm
          kind: Service
          port: 8080
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
